--- a/CSS/style.css
+++ b/CSS/style.css
@@ -132,6 +132,9 @@ nav a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: absolute;
+    left: 130px;
+top: 800px;
 }
 
 .about-img {
@@ -208,6 +211,9 @@ nav a {
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    position: absolute;
+    left: 230px;
+    top: 1331px;
 }
 
 .services-card-container {
@@ -294,6 +300,9 @@ nav a {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    position: absolute;
+    left: 130px;
+    top: 1810px;
     /* background-color: aquamarine; */
 }
 
@@ -379,6 +388,9 @@ nav a {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    left: 230px;
+    top: 2470px;
 }
 
 .cta-box {
@@ -427,6 +439,9 @@ footer {
     flex-direction: column;
     justify-content: center;
     gap: 20px;
+    position: absolute;
+    top: 2867px;
+    /* bottom: 0px; */
 }
 
 footer img {
